# ghostprotocol

./: .gitignore  CLAUDE.md  PITCH.md  README.md  package-lock.json  package.json  vite.config.ts
Docs/: 01-PROJECT-OVERVIEW.md  02-TECHNICAL-ARCHITECTURE.md  03-SOLANA-SMART-CONTRACT.md  04-BUILD-PLAN-4-WEEKS.md  05-QUICK-REFERENCE.md  06-API-INTEGRATION-GUIDE.md  README.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs  scan.rs  settings.rs  subscriptions.rs
src-tauri/src/db/: mod.rs  models.rs  schema.rs
src/components/Activity/: index.tsx
src/components/Dashboard/: CancelModal.tsx  ScanOverlay.tsx  SolanaWallet.tsx  index.tsx
src/components/Layout/: Header.tsx
src/components/Settings/: index.tsx
