[package]
name = "ghost-protocol"
version = "0.1.0"
description = "Ghost Protocol - Local-first AI agent desktop app"
authors = ["Ghost Protocol Team"]
edition = "2021"

[lib]
name = "ghost_protocol_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
